--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>个人简历</title>
+    <title>个人编程语言能力报告</title>
     <style>
         * {
             margin: 0;
@@ -258,11 +258,10 @@
 
         <div class="profile">
             <img src="http://nocturne.bczcdn.com/file/1645597751069_39196/head.png" alt="">
-            <h3>Algo</h3>
-            <p>前端开发</p>
+            <h3>Name</h3>
+            <p>job title</p>
             <div class="buttons">
-                <a class="btn" href="http://nocturne.bczcdn.com/audio/1647325026464_87789/小夜简历3.0.pdf" target="_blank">下载简历</a>
-                <a class="btn" href="javascript:alert('发送成功');">发送面试邀请</a>
+                <a class="btn" href="http://nocturne.bczcdn.com/audio/1647325026464_87789/小夜简历3.0.pdf" target="_blank">Download Resume</a>
             </div>
         </div>
 
@@ -270,20 +269,17 @@
 
             <div class="about">
                 <h3 class="title">About Me</h3>
-                <p>我叫Algo，小名是小夜，擅长Python，精通爬虫，可视化，数据分析，人工智能等领域。</p>
-                <p>不仅如此，我还能熟练使用前端语言独立制作电商网站，招聘网站等等，这个简历也是我用HTML和CSS完成的哦。</p>
+                <p>Introduce Line #1</p>
+                <p>Introduce Line #2</p>
                 <div class="box-container">
                     <div class="box">
-                        <h3><span>年龄 : </span>20</h3>
-                        <h3><span>地址 : </span>四川，成都</h3>
-                        <h3><span>电话 : </span>1234567890</h3>
-                        <h3><span>邮箱 : </span>Algo@Yequ.Com</h3>
+                        <h3><span>Address : </span>Put your address here</h3>
+                        <h3><span>Phone : </span>1234567890</h3>
+                        <h3><span>Email : </span>XXXX@gmail.com</h3>
                     </div>
                     <div class="box">
-                        <h3><span>求职 : </span>Web Design</h3>
-                        <h3><span>语言 : </span>Hindi, English</h3>
-                        <h3><span>工龄 : </span>2 年</h3>
-                        <h3><span>现状 : </span>随时到岗</h3>
+                        <h3><span>Language : </span>Hindi, English</h3>
+                        <h3><span>Work Experience : </span># Year</h3>
                     </div>
                 </div>
             </div>
